--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <div class="container-fluid p-0">
                 <div class="row g-0">
                     <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/1.jpg" title="Consórcio — Planejamento para conquistar">
+                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/1.jpg" title="Planejamento para conquistar">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/1.jpg" alt="..." />
                             <div class="portfolio-box-caption">
                                 <!-- <div class="project-category text-white-50">Category</div> -->
@@ -122,7 +122,7 @@
                         </a>
                     </div>
                     <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/2.jpg" title="Seguro de Vida - Proteção para quem importa">
+                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/2.jpg" title="Proteção para quem importa">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/2.jpg" alt="..." />
                             <div class="portfolio-box-caption">
                                 <!-- <div class="project-category text-white-50">Category</div> -->
@@ -131,7 +131,7 @@
                         </a>
                     </div>
                     <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/3.jpg" title="Seguro Residencial - Segurança para o seu lar">
+                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/3.jpg" title="Segurança para o seu lar">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/3.jpg" alt="..." />
                             <div class="portfolio-box-caption">
                                 <!-- <div class="project-category text-white-50">Category</div> -->
@@ -140,7 +140,7 @@
                         </a>
                     </div>
                     <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/4.jpg" title="Seguro Veicular - Tranquilidade no dia a dia">
+                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/4.jpg" title="Tranquilidade no dia a dia">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/4.jpg" alt="..." />
                             <div class="portfolio-box-caption">
                                 <!-- <div class="project-category text-white-50">Category</div> -->
@@ -149,7 +149,7 @@
                         </a>
                     </div>
                     <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/5.jpg" title="Seguro de Frotas - Gestão e proteção veicular">
+                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/5.jpg" title="Gestão e proteção veicular">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/5.jpg" alt="..." />
                             <div class="portfolio-box-caption">
                                 <!-- <div class="project-category text-white-50">Category</div> -->
@@ -158,7 +158,7 @@
                         </a>
                     </div>
                     <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/6.jpg" title="Plataforma de Saúde - Cuidado acessível e contínuo">
+                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/6.jpg" title="Cuidado acessível e contínuo">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/6.jpg" alt="..." />
                             <div class="portfolio-box-caption p-3">
                                 <!-- <div class="project-category text-white-50">Category</div> -->
