Inclusao rodape institucional

--- a/index.html
+++ b/index.html
@@ -193,8 +193,27 @@
             </div>
         </section>
         <!-- Footer-->
-        <footer class="bg-light py-5">
-            <div class="container px-4 px-lg-5"><div class="small text-center text-muted">Copyright &copy; 2025 - Seeg Solutions</div></div>
+        <footer class="footer">
+            <div class="container text-center">
+                <!-- Parceiros -->
+                <div class="footer-partners mb-4">
+                    <span class="partner"><img src="assets/img/parceiros/porto.png" alt="Porto"></span>
+                    <span class="partner"><img src="assets/img/parceiros/porto-bank.png" alt="Porto Bank"></span>
+                    <span class="partner"><img src="assets/img/parceiros/benemed.png" alt="Benemed"></span>
+                    <span class="partner"><img src="assets/img/parceiros/zurich.png" alt="Zurich Seguros"></span>
+                    <span class="partner"><img src="assets/img/parceiros/bradesco-seguros.png" alt="Bradesco Seguros"></span>
+                </div>
+                <!-- Institucional -->
+                <div class="footer-info small text-muted">
+                    <strong>Seeg Solutions</strong> •
+                    CNPJ 31.385.014/0001-02 •
+                    Florianópolis/SC •
+                    (51) 98121-3055 • contato@seegsolutions.com.br
+                </div>
+                <!-- <p class="text-muted small mt-3 mb-0">
+                    © 2025
+                </p> -->
+            </div>
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
